--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,16 @@ project:
   output-dir: docs
 
 website:
-  title: "git_web"
-  navbar:
-    left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+  sidebar:
+    style: "docked"
+    search: true
+    contents:
+      - section: "Basic Analysis"
+        contents:
+          - index.qmd
+      - section: "More Stuff"
+        contents:
+          - section1.qmd
 
 format:
   html:
