--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: projects/index.qmd
+      - href: index.qmd
         text: Projects
       - href: section1.qmd
         text: About
