--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,22 +2,23 @@ project:
   type: website
   output-dir: docs
 
+execute:
+  freeze: auto
+  
 website:
   page-navigation: true
-  title: "John Humphreys"
-  page-footer:
-    left: "&copy; Copyright 2022, John Humphreys"
-    right: "Under Construction"
+  title: "Spatial Lab"
+  open-graph: true
   navbar:
-    left:
+    right:
       - href: index.qmd
-        text: home
-      - text: contact me
+        text: Home
+      - text: Connect
         menu:
           - icon: github
             href: https://github.com/JMHumphreys
             text: "jmhumphreys"
-          - favicon: osf.svg
+          - icon: octagon
             href: https://osf.io/zwbhm/
             text: "John M Humphreys"
           - icon: google
@@ -30,9 +31,19 @@ website:
             href: mailto:jmh09r@my.fsu.edu
             text: "jmh09r@my.fsu.edu"
       - href: section1.qmd
-        text: projects
+        text: Research
       - href: section2.qmd
-        text: about
+        text: About
+      - icon: github
+        menu:
+          - text: Source Code
+            url:  https://github.com/JMHumphreys/jmhumphreys.github.io
+          - text: Report a Bug
+            url:  https://github.com/JMHumphreys/jmhumphreys.github.io/issues
+  page-footer:
+    border: false
+    left: "Published with [Quarto](https://quarto.org/) v1.2.335"
+    right: "© 2023 [John Humphreys](/about) | [MIT License](https://github.com/JMHumphreys/jmhumphreys.github.io/license)"
         
 #website:
 #  sidebar:
