--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ execute:
 website:
   page-navigation: true
   title: "Spatial Lab"
-  site-url: https://github.com/JMHumphreys/jmhumphreys.github.io
+  site-url: https://jmhumphreys.github.io/
   open-graph: true
   favicon: images/favicon.png
   navbar:
