--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
         text: Home
       - href: pindex.qmd
         text: Research
-      - href: psindex.qmd
+      - href: sindex.qmd
         text: Snippits
       - href: about.qmd
         text: About
