--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,12 +7,13 @@ execute:
   
 website:
   page-navigation: true
-  title: "Spatial Lab"
+  title: "Spatial Dynamics"
   site-url: https://jmhumphreys.github.io/
   open-graph: true
-  favicon: images/favicon.png
+  favicon: images/biogeo.png
   navbar:
-    title: false
+    logo: images/logo-bg.png
+    title: "Spatial Dynamics"
     right:
       - href: index.qmd
         text: Home
@@ -55,7 +56,9 @@ format:
     theme:
       light: flatly
       dark: darkly
-    css: scss/styles.css
+    revealjs:
+      logo: images/logo-bg.png
+      css: scss/styles.css
     link-external-icon: true
     link-external-newwindow: true
     smooth-scroll: true
